[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = 'pyzeo'
version = '0.1.6'
description = 'Python interface to Zeo++'
readme = "README.md"
authors = [{ name = "Lauri Himanen" }]
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: C++",
    "Programming Language :: Cython",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering"
]
keywords = ['zeo++', 'porous', 'materials', 'science']

[project.urls]
Source = "https://github.com/nomad-coe/pyzeo"

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools.package-dir]
"" = "src"